# ChangeLog for net-print/cups-filters
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/cups-filters/ChangeLog,v 1.114 2014/04/27 12:05:05 dilfridge Exp $

*cups-filters-1.0.53 (27 Apr 2014)

  27 Apr 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +cups-filters-1.0.53.ebuild:
  Version bump, bug 508844

  26 Apr 2014; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.52.ebuild:
  Stable for amd64, wrt bug #506518

  24 Apr 2014; Jeroen Roovers <jer@gentoo.org> cups-filters-1.0.52.ebuild:
  Stable for HPPA (bug #506518).

  23 Apr 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -cups-filters-1.0.44.ebuild, -cups-filters-1.0.48.ebuild,
  -files/cups-filters-1.0.36-parallel.patch:
  Remove old

*cups-filters-1.0.52 (15 Apr 2014)

  15 Apr 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +cups-filters-1.0.52.ebuild:
  Version bump, bug 506518

*cups-filters-1.0.48 (13 Mar 2014)

  13 Mar 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +cups-filters-1.0.48.ebuild:
  Version bump

  22 Feb 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -cups-filters-1.0.36-r1.ebuild:
  Remove old

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.43-r1.ebuild:
  Stable for sparc, wrt bug #437654

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.43-r1.ebuild:
  Stable for ppc64, wrt bug #437654

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.43-r1.ebuild:
  Stable for ppc, wrt bug #437654

  17 Feb 2014; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.43-r1.ebuild:
  Stable for arm, wrt bug #437654

  16 Feb 2014; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.43-r1.ebuild:
  Stable for ia64, wrt bug #437654

  16 Feb 2014; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.43-r1.ebuild:
  Stable for alpha, wrt bug #437654

  15 Feb 2014; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.43-r1.ebuild:
  Stable for x86, wrt bug #437654
