@@ -8,24 +8,14 @@ DIST cups-filters-1.0.52.tar.xz 1311192 SHA256 32fc3647e7d610217d813cfe87dae861b
 DIST cups-filters-1.0.53.tar.xz 1312476 SHA256 a25b55228cc13549d6989a9f6319e4e313ce42fe88d8b645e02b0c17d02dc2bf SHA512 dc46195211615cd91ce4bd8a616a8f89bcfd5e601195d6a0ab9761aee964c424929dc0d30347947d742138f7dad29ce9259bac6209945cc4a1d475614db59d0e WHIRLPOOL 95a758b29418939f3dcd6f49d52b750756dc01e43eeccf0a7833925052f42d919106346fa4a0503532ab1e7321247fdbef8547755b3c2288ad91789f26bbb5b7
 EBUILD cups-filters-1.0.43-r1.ebuild 3553 SHA256 3ac5d28c1a35a0e284ba88c3c836c264dc645524a4c44a1b9e68b0534bbe9325 SHA512 5cf964b2345ed2f85ec6cb4dbb4cac0e125d5229761c7b5ea0919d21e7c22069af2a959292d02e139cfb06243b4699380c8a1a8a817742f4eb2b255ebf626a6f WHIRLPOOL 582f84a72ae3c57e3b233acaef932bd143928424f90052da25b72b266bde024c009d91eb5cabb8bb318425a1b1848e0c3a2c4641306ff3c01888745091f5c668
 EBUILD cups-filters-1.0.52.ebuild 3566 SHA256 e18ba79574082b6f5d1b21c6c860b7efb0ec1efdde8c0f43f1961047a94c72e4 SHA512 f6663bb0f4f6eb0806fa009d3051eb9bb2e9f7e010538371025a53e87b74f2e2eee483048e7a977d89f0d3a74b355abbb7aef3f8024617c5bc83e2abb47b6496 WHIRLPOOL 99e2ebb474bd22796df411599cd2aa9726c1eccf336a58b245f7252e671d366f8101ef667e51dbe6edaaae553b1646181c26b598d331d09e0910119d0fa7a2da
-EBUILD cups-filters-1.0.53.ebuild 3564 SHA256 770b8691826dbe6c5140ae3efe747c3d27ce82938a3b52ec901a372dc6e17f4d SHA512 e849c032a4d455c3d443f5c336ce4c2c2c87eea4e60d45e4d94dea6bc48ca91cb2809662c55beb6501fe62a707995299753183533989a6fa28789da6df109d2c WHIRLPOOL 0e6bbfe0f4e46b44de3cabf03cd8cb8dcde51f4e09912eb7247935851e4035d7656c079f5e939e59c72494ea1d29171d86a635896ab13dd24efc8451c5f5830d
+EBUILD cups-filters-1.0.53.ebuild 3561 SHA256 0e998ae355b619f7bc9e84578f474ad199965775bb5473bb80dd1c34a458b5db SHA512 b8b203f72433a9181320c2be760c01d60aed6a4b41f337ca553f93d19f0c2e6e670d55be36ca7c4204961b4b38f5c50bfecd1f9d4f31a58ef377d2054cea91df WHIRLPOOL 015d4b345744b00fdbc9179f0f2fbe325bc169e7a7bf2fd0f7f714764e6a71b5903b3d805a69f3c729187a1c181245c6b2571f535f641e1d8142e5fb0df35e51
 EBUILD cups-filters-9999.ebuild 3563 SHA256 aff1098928dd281942ee3a31971686922a8b9e824f3dbe1dc84a0d10005b82fd SHA512 69b0f95c9aba135ad98d7b0b37cdca9574376b1ed700d880ba2f2b7fd08345d7cf354425a71bd2548017fd7d43b546888643ecaea5ee77ad8814de648eebfc28 WHIRLPOOL 6897012e9aff01a0f23c416ed18879125885244f1654551e79e89f18cddf0d7add69841495a2ad1a561d62f7208cd92f4b234dc0804c3ee91d95ee16879be214
-MISC ChangeLog 18821 SHA256 f15d8cee311979400154d1af9bfd441ca9cd46fb7273154321e8f7f275563406 SHA512 da678f9123f12803158c0cd7e5d28e781eda44bbff733a53c9633c22c382daa77ae5bd4f3794239ce25fcc8f10d7a39da5a9f0fb55af58813519679a17ab851e WHIRLPOOL a1aa64fd29a3da886c07238ed687f32473d6f845e34256c14521eabf0a4f1b90b3a0783f4b14311dbbe59d7b567bbc08194495b25750e991b744ec051c918339
+MISC ChangeLog 18924 SHA256 f09f89330e9c55c75985ca50602ebc2c1f986fe73434d470e0626944db0b5bc9 SHA512 dc73b47be0085565b0f9b13b935532e25da6f98676b83959eb51cf488e1dfe2c741e0b40a2074cf6c2a4077413796647e32d053cc2abcebbe2a2bc784c04c31f WHIRLPOOL ad8cc33cea5a6538d3e2a5c541248e62ab052c82efea1a59026f89f4932765632640a66e2032ca3e5cef5677a75169e4882651b005a89ff71d3063a45fbd7244
 MISC metadata.xml 290 SHA256 07d21bc9b73af41131dc35b0b30829bb124443a931df199fad5720fd0c6ecb82 SHA512 8614acef9fc5a0d78a7c65ce34d79189c2496946a4bccb215b9404abdc0c821ee89f3a89892e2c320359063fc43750c9e9581b7fb732d9d710ff7bb2dd6229db WHIRLPOOL a0ef99c415a6e3dea7f7c0f2349ea67ce76e8361f36d1f8c828d136ebf01e4d3a5b1038aba6aea92843ab67bed68c38a0a841f3620e7d46aa205360694e682ba
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTXPN1AAoJEJS/30SErRQvr1MQAJBFSY2UOCdppE/oiwZzrrCT
-ihRdVpuPWXh3gBreYCVc69qdTEenKeQH5qEFJTo6BA0FxEtPUJKwGhPUQ2ktTsi6
-8medp4nRfc/wd2YMoj/sjGC131Cp8zRBBe6YyaZl3ckySKMDyfSkDnx203H1KLh/
-NjHi0P7gJmoWOUBVVc0WpGhNfP4LSxPvEb7AAhNzlq7MAjwVAX4VP7piRhAIn6LN
-YYnJaJdvnrTPOTux1kVIKiXOQHygutSc/8i1ylxkqpTK46hyVAu/W/I6m7RBU7wQ
-zeyx7kMCgMxgS5L6mGs3ly2PzA2QBKb6JsS7x6bvWyNn+bA/FeQSzgz8CDbQt91Q
-1MYLKLb/dE0xCrt/TWOFysXXAmorWkbd54d5PZmpYE9/0tTBH56AVqL+gC6wuzho
-yj2fYe0VyXRngnUl8xLPVjk8jJejp0FagEuqaUGjhLpKtrESpMaEcJBCFXxZdPRY
-I2+dd5A//n2Fw5vMg0DgKM42cpbthzoSA3gJU3k9eK2vTgmVhJ/9jigzlqA+FFHY
-5RblVqn+6LkQZllAizxoEuONTcWv6Ui1Q8NKuif+rItHLjP6r6oR08dFFu7Rwh0p
-4iRpRVS3cEYUUikw66EFcK5RWLa3u10IIkvilzHBd2MUxKk821vEOR3QEKT/rvAb
-m+WIa8B7csfSMFPxMh4v
-=lzPr
+iEYEAREIAAYFAlNdCmMACgkQVWmRsqeSphM9aQCeLEG7ChPKDEkzrmJe35tPUb1Z
+eFIAnRrcWAmCUJA5P49qMZHC8FtwVeak
+=YaLo
 -----END PGP SIGNATURE-----
