@@ -1,6 +1,9 @@
 # ChangeLog for net-print/cups-filters
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups-filters/ChangeLog,v 1.114 2014/04/27 12:05:05 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups-filters/ChangeLog,v 1.115 2014/04/27 13:47:14 jer Exp $
+
+  27 Apr 2014; Jeroen Roovers <jer@gentoo.org> cups-filters-1.0.53.ebuild:
+  Stable for HPPA (bug #508844).
 
 *cups-filters-1.0.53 (27 Apr 2014)
 
